--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations</h1>
-    <h2>This v6 application was deployed using AWS CodeDeploy from Github repo.</h2>
+    <h2>This v application was deployed using AWS CodeDeploy from Github repo.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
